--- a/index.html
+++ b/index.html
@@ -1,11 +1,70 @@
+
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Privacy Policy</title>
+<!-- saved from url=(0045)https://www.cricketbuddies.com/privacy-policy -->
+<html lang="en" dir="ltr" prefix="og: http://ogp.me/ns# article: http://ogp.me/ns/article# book: http://ogp.me/ns/book# profile: http://ogp.me/ns/profile# video: http://ogp.me/ns/video# product: http://ogp.me/ns/product# content: http://purl.org/rss/1.0/modules/content/ dc: http://purl.org/dc/terms/ foaf: http://xmlns.com/foaf/0.1/ rdfs: http://www.w3.org/2000/01/rdf-schema# sioc: http://rdfs.org/sioc/ns# sioct: http://rdfs.org/sioc/types# skos: http://www.w3.org/2004/02/skos/core# xsd: http://www.w3.org/2001/XMLSchema#" class="js mdl-js"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<link rel="profile" href="http://www.w3.org/1999/xhtml/vocab">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta property="og:type" content="article">
+	<meta property="og:title" content="Privacy Policy">
+	<title>Privacy Policy | Align It Games</title>
+
 </head>
-<body>
-	<h1>Privacy Policy</h1>
-</body>
+<body class="html not-front not-logged-in no-sidebars page-node page-node- page-node-351 node-type-page">
+
+	<div class="main-container ">
+
+
+		<div class="container content-container">
+
+
+			<div class="col-sm-12 content-region">
+				<a id="main-content"></a>
+
+				<h1 class="page-header">Privacy Policy</h1>
+
+				<div class="region region-content">
+					<div id="block-system-main" class="block block-system clearfix">
+
+
+						<div id="node-351" class="node node-page clearfix" about="/privacy-policy" typeof="foaf:Document">
+							<header>
+								<span property="dc:title" content="Privacy Policy" class="rdf-meta element-hidden"></span>      </header>
+								<div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p>This privacy policy will govern the use of the Application and associated Service(s) developed/provided by Align It Games/Regleware Technologiess (hereinafter referred to as "We"or “Company”), a Company having its place of business at Jaipur.</p>
+									<p>Any person (hereinafter referred to as "You") using the Application shall be governed by this Privacy Policy. By agreeing to use the Application and accepting the Terms and Conditions before installing the Application, You agree to abide by this Privacy Policy.</p>
+									<p><strong>1. Collection of Information</strong></p>
+									<p>We collect Personal information from you to allow you the usage of our Application. Each time You use our Application, personal information, such as your name , e-mail address and so on may be collected by us for giving you access to the Application and may display the same information on the Application for purposes of enabling your transaction.</p>
+									<p><strong>2. Use of Information</strong></p>
+									<p>We may request information from you to allow you to use our Application and to track your usage of our Application in order to improve the facilities provided under our Application in an organized manner. We will use your information to provide you with our personalized services and to benefit you fully from the usage of our Application. We may also use your information to notify you the important changes in our Application and other information updated on the Application.<br>
+									Our Application may contain links to other websites, which do not fall under the scope of this Privacy Policy. We do not hold any responsibility for the Privacy Policy of such other websites.</p>
+									<p>Your personal information may be displayed on our Application for purposes of enabling you to carry out necessary transactions.</p>
+									<p><strong>4. Security and Confidentiality</strong></p>
+									<p>We understand and recognize that privacy is very important. We take all the reasonable measures to protect the confidentiality of the information disclosed by You and will not disclose the information on any other forum other than Application and website and server associated thereof.</p>
+									<p><strong>5. Third Party Disclosure</strong></p>
+									<p>We will not disclose any of Your information to any third parties unless we are bound by law to do so. We may however disclose it to our trusted service providers or suppliers who help us in providing Service(s) to You.</p>
+									<p><strong>6. Disclosure of Certain Information</strong></p>
+									<p>In certain cases where we are bound by the provisions of law to disclose certain information to a law enforcing agency or to a court of law, or in cases where we are directed by a competent law enforcing agency to carry out an investigation into to the activities on your account, we may do so without a notice to you. Such disclosure or investigation will not amount to breach of any privacy obligations on our part.</p>
+									<p><strong>7. User Data Deletion</strong></p>
+									<p>You can delete all your data from our game by emailing us on below Email Address.<br></p>
+									<p>Email:<a href="mailto:regleware@gmail.com" style="color:#333333">regleware@gmail.com</a><br></p>
+									<p>Please note use the same Email Id that you used in the game to login when you send us email for data deletion</p>
+									<p><strong>8. Contact</strong></p>
+									<p>If you have a query, which was not addressed in this Privacy Policy, you may contact us or at the following address:</p>
+									<p><strong>AlignIt Games, Regleware Technologiess</strong>,<br>
+										Email:<a href="mailto:regleware@gmail.com" style="color:#333333">regleware@gmail.com</a></p>
+
+										<p>New versions of the privacy policy may be updated from time to time.</p>
+									</div></div></div>    <footer>
+									</footer>
+								</div>
+
+							</div>
+						</div>
+					</div>
+
+
+				</div>
+			</div>
+
+		</body>
 </html>
